# hearthstone-linux-gui

./: .gitignore  CHANGELOG.md  Cargo.toml  LEGAL.md  LICENSE  README.cn.md  README.md  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.direnv/: flake-profile-2-link
.github/workflows/: release.yml
assets/: client.config.in
crates/stubs/blz-commerce-sdk-plugin/: Cargo.toml
crates/stubs/blz-commerce-sdk-plugin/src/: lib.rs
crates/stubs/commerce-http-client/: Cargo.toml
crates/stubs/commerce-http-client/src/: lib.rs
crates/stubs/core-foundation/: Cargo.toml
crates/stubs/core-foundation/src/: lib.rs
crates/stubs/native-api-mac/: Cargo.toml
crates/stubs/native-api-mac/src/: lib.rs
crates/stubs/osx-window-management/: Cargo.toml
crates/stubs/osx-window-management/src/: lib.rs
data/: io.github.hearthstone_linux.desktop  io.github.hearthstone_linux.metainfo.xml
packaging/: README.md
packaging/appimage/: AppRun  build.sh
packaging/deb-rpm/: build.sh
packaging/native/: APPIMAGE_DEVCONTAINER.md  Dockerfile  build-dist.sh
src/: config.rs  download.rs  lib.rs  logging.rs  main.rs  paths.rs  util.rs
src/auth/: mod.rs
src/install/: compatibility.rs  launcher.rs  manager.rs  mod.rs  transform.rs  unity.rs
src/ngdp/: archive.rs  blizini.rs  blte.rs  cdn.rs  configfile.rs  encoding.rs  install_exec.rs  install_plan.rs  installfile.rs  local_manifest.rs  mod.rs  psv.rs
src/ui/: actions.rs  app.rs  auth.rs  auth_callback.rs  browser.rs  components.rs  mod.rs  state.rs  status.rs  theme.rs  window.rs
