[package]
name = "hearthstone-linux-gui"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Native GTK4 Linux GUI manager for crafting and launching Hearthstone"

[lib]
name = "hearthstone_linux"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "crates/stubs/blz-commerce-sdk-plugin",
    "crates/stubs/commerce-http-client",
    "crates/stubs/core-foundation",
    "crates/stubs/native-api-mac",
    "crates/stubs/osx-window-management",
]
default-members = [
    ".",
    "crates/stubs/blz-commerce-sdk-plugin",
    "crates/stubs/commerce-http-client",
    "crates/stubs/core-foundation",
    "crates/stubs/native-api-mac",
    "crates/stubs/osx-window-management",
]
resolver = "2"

[workspace.package]
version = "0.1.9"

[features]
default = ["gui"]
gui = ["dep:relm4", "dep:relm4-components"]

[dependencies]
aes = "0.8"
anyhow = "1"
bitvec = "1"
cbc = { version = "0.1", features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
flate2 = "1"
hex = "0.4"
md5 = "0.7"
pbkdf2 = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
strum = { version = "0.27", features = ["derive"] }
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
walkdir = "2"
xz2 = "0.1"

relm4 = { version = "=0.10.0", features = ["libadwaita"], optional = true }
relm4-components = { version = "=0.10.0", features = ["libadwaita"], optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = "symbols"
